# 59LANG-Compiler

./: .gitignore  .railwayignore  ARCHITECTURE.md  CMakeLists.txt  LANGUAGE_REFERENCE.md  Procfile  README.md  SETUP.md  streamlit_app.py  vercel.json
.github/workflows/: ci_deploy.yml  deploy-to-render.yml
.streamlit/: config.toml
backend/: app.py  requirements.txt
frontend/: package.json
frontend/public/: highlighter.js  index.html  runtime.js  script.js  styles.css
include/: ast_node.h  error.h  parser.h  scanner.h  symbol_table.h  token.h
src/: ast_node.cpp  main.cpp  parser.cpp  scanner.cpp  symbol_table.cpp  token.cpp
tests/resources/input/: test_conditional.code  test_error_undeclared.code  test_loop.code  test_simple.code
